--- a/mnist_in_pythor_from_scratch_cleaned_wip3.ipynb
+++ b/mnist_in_pythor_from_scratch_cleaned_wip3.ipynb
@@ -44,10 +44,20 @@
         "train_dataset = torchvision.datasets.MNIST(root='./', train=True, download=True, transform=to_tensor)\n",
         "#test_dataset = torchvision.datasets.MNIST(root='./', train=False, download=True, transform=to_tensor)\n",
         "train_ds, val_ds = random_split(train_dataset, [59000, 1000])\n",
-        "len(train_ds), len(val_ds)"
+        "len(train_ds), len(val_ds)\n",
+        "#len(train_dataset)"
       ],
       "metadata": {
         "id": "ko3R62h8FxV_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8VP6d9Ih3z5h"
       },
       "execution_count": null,
       "outputs": []
@@ -164,6 +174,30 @@
         "        biases[i] -= bias_deltas[i]\n",
         "    return weights, biases\n",
         "\n",
+        "def batch_validation(weights, biases, batch):\n",
+        "    images, labels = batch\n",
+        "    images = [image.squeeze().tolist() for image in images]\n",
+        "    images = [[pixel for row in image for pixel in row] for image in images]\n",
+        "    outputs = forward_pass(images, weights, biases)\n",
+        "    outputs = torch.tensor([np.argmax(softmax(output)) for output in outputs])\n",
+        "    accuracy_and_counts = accuracy(outputs, labels)\n",
+        "    return accuracy_and_counts\n",
+        "\n",
+        "def evaluate(weights, biases, val_loader, epoch=None):\n",
+        "    accum_acc_and_counts = [batch_validation(weights, biases, batch) for batch in val_loader]\n",
+        "    return epoch_end_validation(accum_acc_and_counts, epoch=None)\n",
+        "\n",
+        "def epoch_end_validation(accum_acc_and_counts, epoch):\n",
+        "    accum_acc_and_counts = torch.stack(accum_acc_and_counts)\n",
+        "    acc, count, total = accum_acc_and_counts[:, 0].mean(), accum_acc_and_counts[:, 1].sum(), accum_acc_and_counts[:, 2].sum()\n",
+        "    print(f\"Epoch {epoch}, Accuracy: {acc}, Count: {count}, total: {total}\")\n",
+        "\n",
+        "\n",
+        "def accuracy(outputs, labels):\n",
+        "    count = torch.sum(outputs == labels).item()\n",
+        "    return torch.tensor([count/labels.numel(), count, labels.numel()])\n",
+        "\n",
+        "\n",
         "def train(num_epochs, learning_rate):\n",
         "    num_features = 784\n",
         "    num_neurons = 10\n",
@@ -189,10 +223,10 @@
         "            total_error = sum(sum(e) for e in errors[0])\n",
         "            print(f\"Epoch {epoch+1} completed in {end - start} seconds\")\n",
         "            print(f\"Epoch {epoch}, Error: {total_error}, weights: {weights}, Biases: {biases}\")\n",
-        "\n",
+        "            evaluate(weights, biases, val_loader, epoch)\n",
         "    return weights, biases\n",
         "\n",
-        "num_epochs = 3\n",
+        "num_epochs = 5\n",
         "learning_rate = 0.00125\n",
         "\n",
         "\n",
@@ -340,7 +374,7 @@
         "    for epoch in range(num_epochs):\n",
         "        start = time.time()\n",
         "        for input_batch, target_batch in train_loader:\n",
-        "            input_batch =input_batch.squeeze().tolist()\n",
+        "            input_batch = input_batch.squeeze().tolist()\n",
         "            input_batch = [[item for sublist in outer for item in sublist] for outer in input_batch]\n",
         "            target_batch = target_batch.tolist()\n",
         "            target_batch = [[l] for l in target_batch]\n",
@@ -387,7 +421,7 @@
     {
       "cell_type": "code",
       "source": [
-        "bytes_,lab = val_ds[200]\n",
+        "bytes_,lab = val_ds[211]\n",
         "plt.imshow(bytes_[0], cmap='gray')\n",
         "print(\"Label: \", lab)\n",
         "squeezed = bytes_[0].squeeze()\n",
@@ -656,7 +690,7 @@
       "metadata": {
         "id": "sMUDyk7iTlzp"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -665,25 +699,10 @@
         "torch.sum(outputs[:1].data).item()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rOtZzygOUKbw",
-        "outputId": "1dca4af2-9ab3-4c3b-dbb5-d9f30af01b33"
+        "id": "rOtZzygOUKbw"
       },
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "-1.002246618270874"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 34
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -693,7 +712,7 @@
       "metadata": {
         "id": "eOzOtu-pUP3w"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -702,25 +721,10 @@
         "torch.sum(probs[:1].data).item()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BWJtEFeQUcxS",
-        "outputId": "7244f9c0-66a9-4702-c85b-f3b5e14d11a8"
+        "id": "BWJtEFeQUcxS"
       },
-      "execution_count": 38,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1.0000001192092896"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 38
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -728,25 +732,10 @@
         "torch.argmax(probs[:1].data)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "q5tw-aKDUqRp",
-        "outputId": "628fd521-45f8-43da-9f54-d0d13165240c"
+        "id": "q5tw-aKDUqRp"
       },
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor(6)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 32
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -755,25 +744,10 @@
         "max_prob, label"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "LDfIfkMoXE4a",
-        "outputId": "58314515-969f-486f-b1f8-56f46a9500cc"
+        "id": "LDfIfkMoXE4a"
       },
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(tensor([0.1242]), tensor([6]))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 41
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -783,27 +757,10 @@
         "#print(max_probs)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "O0HPv4NgXqeZ",
-        "outputId": "7adb370b-5851-4e71-d1ac-f1d8bfa72968"
+        "id": "O0HPv4NgXqeZ"
       },
-      "execution_count": 45,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "tensor([6, 8, 0, 9, 2, 9, 7, 6, 4, 5, 0, 4, 2, 0, 4, 7, 9, 5, 0, 9, 7, 5, 5, 0,\n",
-            "        0, 0, 5, 4, 9, 5, 7, 9, 9, 9, 5, 8, 5, 0, 0, 0, 8, 2, 9, 9, 7, 9, 9, 5,\n",
-            "        2, 3, 5, 4, 9, 0, 9, 0, 2, 2, 5, 0, 0, 0, 2, 9, 2, 9, 0, 7, 6, 9, 5, 2,\n",
-            "        9, 7, 9, 9, 0, 7, 3, 0, 7, 0, 0, 4, 5, 2, 0, 2, 2, 2, 5, 0, 8, 0, 9, 0,\n",
-            "        9, 2, 9, 5, 4, 7, 0, 4, 6, 1, 0, 5, 9, 7, 9, 0, 0, 0, 2, 5, 7, 0, 9, 7,\n",
-            "        0, 3, 2, 9, 0, 9, 0, 7])\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -811,25 +768,10 @@
         "torch.sum(labels == preds)/labels.shape[0]"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "N4Gcx4nKYQep",
-        "outputId": "bfe20ce7-f722-41d3-f7cd-4d087a9129de"
+        "id": "N4Gcx4nKYQep"
       },
-      "execution_count": 52,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor(0.0703)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 52
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -841,7 +783,7 @@
       "metadata": {
         "id": "DHR6JkSocCA8"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -850,96 +792,79 @@
         "torch.where(preds == labels)[0].shape[0]/128"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JVXAH8N6cLhK",
-        "outputId": "a760daf4-a81b-4221-c648-e86f66c8a2fa"
+        "id": "JVXAH8N6cLhK"
       },
-      "execution_count": 69,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.0703125"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 69
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "loss_fn = F.cross_entropy"
-      ],
+      "source": [],
       "metadata": {
         "id": "ExrI-LR_p5ht"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "loss = loss_fn(torch.tensor([0.0,2,0]), torch.tensor([0.0,0,0]))\n",
-        "print(loss)\n",
-        "\n"
+        "#batch_validation(weights, biases, next(iter(val_loader)))\n",
+        "x = torch.tensor([3,3, 3, 9])\n",
+        "y = torch.tensor([3, 3, 4,9])\n",
+        "sum(x == y).item()/x.numel()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "LdtI0wvddLFj",
-        "outputId": "5601f3b1-791b-45d7-f0b6-9a2cc971b68e"
+        "id": "N3k-TU00nbn2"
       },
-      "execution_count": 80,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "tensor(-0.)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yC133ntkoCcR"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "op = [x['val_loss'] for x in {1:1,2:2,3:3}]"
+        " #torch.tensor([np.argmax(softmax(output)) for output in [[1,2], [4,3]]])\n",
+        "stacked_up = torch.stack([torch.tensor([1.0,5,6,8]), torch.tensor([1.0,2,4,8]), torch.tensor([1,2,3,8])])\n",
+        "stacked_up[:, 3].sum(dim=0)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 193
-        },
-        "id": "Y6BRg4DruiI2",
-        "outputId": "43148b42-13c8-430a-cc07-5b3191ce5bed"
+        "id": "k54j1H-EJBBx"
       },
-      "execution_count": 84,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "'int' object is not subscriptable",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-84-607fe4e43eff>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'val_loss'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-84-607fe4e43eff>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'val_loss'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def xyz(x=None):\n",
+        "    if x is None:\n",
+        "        x = 1\n",
+        "    else:\n",
+        "        x = x + 100\n",
+        "    return x\n",
+        "\n",
+        "xyz(9)"
+      ],
+      "metadata": {
+        "id": "amHUSBLFkolA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmP9Qh5FEkqIWZIJGwA14x",
+      "authorship_tag": "ABX9TyMAmPV1tsjdJuBU7Na5WHkX",
       "include_colab_link": true
     },
     "kernelspec": {
